style.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');

:root {
  --background-color: #0D192C;
  --heading-color: #fff;
  --content-color: #8BACD9;
  --card-bgcolor: hsl(216, 50%, 16%);
  --line-color: hsl(215, 32%, 27%);
  --cyan-color: hsl(178, 100%, 50%);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--background-color);
  font-family: 'Outfit', sans-serif;
}

img {
  display: block;
  width: 100%;
}

h1 {
  font-size: 22px;
  color: var(--heading-color);
  font-weight: 500;
}

.hover {
  display: none;
}

.white {
  color: var(--heading-color);
}

a {
  text-decoration: none;
  margin-left: 0.2rem;
}

p {
  color: var(--content-color);
}

hr {
  border: 1px solid var(--line-color);
  margin-bottom: 1rem;
}

.main {
  display: flex;
  min-height: 100dvh;
  justify-content: center;
  align-items: center;
}

.main__card {
  max-width: 327px;
  background-color: var(--card-bgcolor);
  padding: 24px 25px 24px 24px;
  border-radius: 15px;
}

.main__card-image {
  margin-bottom: 1.5rem;

  img {
    border-radius: 8px;
    filter: brightness(0.8);
  }
}

.main__card-content {
  h1 {
    margin-bottom: 0.7rem;
  }

  p {
    font-size: 18px;
    font-weight: 200;
    line-height: 1.63;
  }
}

.currency-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-block: 0.8rem;

  .eth {
    display: flex;
    gap: 0.8rem;
    align-items: center;
    
    p {
      font-size: 15px;
      color: var(--cyan-color);
      font-weight: 600;
    }

    img {
      width: 11px;
      height: 18px;
    }
  }

  .days {
    display: flex;
    align-items: center;
    gap: .5rem;

    p {
      font-size: 15px;
    }
    
    img {
      width: 16px;
      height: 16px;
    }
  }
}

.author {
  display: flex;
  gap: 1rem;
  align-items: center;
  font-size: 15px;

  img {
    border: 1px solid var(--heading-color);
    border-radius: 50%;
    width: 33px;
    height: 33px;
  }
}

@media (width >= 760px) {
  .main__card {
    max-width: 350px;
  }

  .main__card-image {
    position: relative;
    cursor: pointer;
  }

  .hover {
    display: block;
    position: absolute;
    width: 48px;
    top: 50%;
    transform: translate(-50%, -50%);
    left: 50%;
    z-index: -1;
  }

  .eth-icon:hover + .hover {
   z-index: 2;
  }

  .eth-icon:hover ~ .overlay {
    z-index: 1;
  }

  .overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: var(--cyan-color);
    top: 0;
    opacity: 0.3;
    z-index: -1;
    border-radius: 8px;
  }

  h1:hover {
      color: var(--cyan-color);
    }

  .white:hover {
    color: var(--cyan-color);
  }
}

